trunk/Archive2/2d/9032dc39154f81/output
main.cpp: In function 'int main()':
main.cpp:25:25: error: aggregate 'begin_error<2u> end_error' has incomplete type and cannot be defined
  begin_error< f.at(w) > end_error;
                         ^
